Added styling for employee and customer details

--- a/src/IIT/PP2/CW2/FXML/EmployeeDetails.fxml
+++ b/src/IIT/PP2/CW2/FXML/EmployeeDetails.fxml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IIT.PP2.CW2.Controller.EmployeeDetailsController">
    <children>
-      <TableView layoutX="42.0" layoutY="50.0" prefHeight="200.0" prefWidth="531.0">
+      <TableView layoutX="35.0" layoutY="43.0" prefHeight="200.0" prefWidth="531.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Full Name" />
+            <TableColumn prefWidth="40.0" text="ID" />
+          <TableColumn prefWidth="180.0" text="Name" />
           <TableColumn prefWidth="89.0" text="Date of Birth" />
             <TableColumn prefWidth="76.0" text="Contact No." />
+            <TableColumn prefWidth="75.0" text="Job Role" />
+            <TableColumn prefWidth="75.0" text="Salary" />
         </columns>
       </TableView>
+      <Label layoutX="243.0" layoutY="23.0" text="Employee Details">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
    </children>
 </AnchorPane>
