--- a/src/IIT/PP2/CW2/FXML/CustomerDetails.fxml
+++ b/src/IIT/PP2/CW2/FXML/CustomerDetails.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="IIT.PP2.CW2.Controller.CustomerDetailsController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IIT.PP2.CW2.Controller.CustomerDetailsController">
+   <children>
+      <TableView layoutX="34.0" layoutY="39.0" prefHeight="200.0" prefWidth="533.0">
+        <columns>
+          <TableColumn prefWidth="40.0" text="ID" />
+          <TableColumn prefWidth="382.0" text="Name" />
+            <TableColumn prefWidth="110.0" text="Column X" />
+        </columns>
+      </TableView>
+      <Label layoutX="244.0" layoutY="19.0" text="Customer Details" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
+   </children>
 </AnchorPane>
