--- a/src/IIT/PP2/CW2/FXML/Welcome.fxml
+++ b/src/IIT/PP2/CW2/FXML/Welcome.fxml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="IIT.PP2.CW2.Controller.WelcomeController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IIT.PP2.CW2.Controller.WelcomeController">
+   <children>
+      <Button layoutX="277.0" layoutY="211.0" mnemonicParsing="false" text="Login" />
+      <Label layoutX="194.0" layoutY="146.0" text="Username" />
+      <Label layoutX="194.0" layoutY="175.0" text="Password" />
+      <TextField layoutX="258.0" layoutY="142.0" />
+      <TextField layoutX="258.0" layoutY="171.0" />
+      <Label layoutX="266.0" layoutY="53.0" text="WELCOME" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
