--- a/src/main/resources/IIT/PP2/CW2/FXML/JobTypeDetails.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/JobTypeDetails.fxml
@@ -1,23 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IIT.PP2.CW2.Controller.JobTypeDetailsController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IIT.PP2.CW2.Controller.JobTypeDetailsController">
    <children>
-      <Label layoutX="246.0" layoutY="28.0" text="Job Type Details" textAlignment="CENTER">
+      <Label layoutX="246.0" layoutY="80.0" text="Job Type Details" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TableView layoutX="34.0" layoutY="48.0" prefHeight="200.0" prefWidth="533.0">
+      <TableView layoutX="34.0" layoutY="100.0" prefHeight="200.0" prefWidth="533.0">
          <columns>
             <TableColumn prefWidth="40.0" text="ID" />
             <TableColumn prefWidth="492.0" text="Job Type" />
          </columns>
       </TableView>
+      <HBox alignment="CENTER" layoutX="35.0" layoutY="14.0" prefHeight="45.0" prefWidth="531.0" spacing="20.0">
+         <children>
+            <Button fx:id="btn_employees" mnemonicParsing="false" onAction="#goToEmployeeDetails" text="Employees" />
+            <Button fx:id="btn_contracts" mnemonicParsing="false" onAction="#goToContractDetails" prefHeight="25.0" text="Contracts" />
+            <Button fx:id="btn_customers" mnemonicParsing="false" onAction="#goToCustomerDetails" text="Customers" />
+            <Button fx:id="btn_jobRoles" mnemonicParsing="false" onAction="#goToJobRoleDetails" text="Job Roles" />
+            <Button fx:id="btn_jobTypes" disable="true" mnemonicParsing="false" onAction="#goToJobTypesDetails" text="Job Types" />
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </HBox>
    </children>
 </AnchorPane>
