--- a/src/main/resources/IIT/PP2/CW2/FXML/JobRoleDetails.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/JobRoleDetails.fxml
@@ -2,14 +2,17 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IIT.PP2.CW2.Controller.JobRoleDetailsController">
+<AnchorPane prefHeight="400.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IIT.PP2.CW2.Controller.JobRoleDetailsController">
    <children>
       <Label layoutX="247.0" layoutY="80.0" text="Job Role Details" textAlignment="CENTER">
          <font>
@@ -25,15 +28,62 @@
       </TableView>
       <HBox alignment="CENTER" layoutX="35.0" layoutY="14.0" prefHeight="45.0" prefWidth="531.0" spacing="20.0">
          <children>
-            <Button fx:id="btn_employees" mnemonicParsing="false" onAction="#goToEmployeeDetails" text="Employees" />
-            <Button fx:id="btn_contracts" mnemonicParsing="false" onAction="#goToContractDetails" prefHeight="25.0" text="Contracts" />
-            <Button fx:id="btn_customers" mnemonicParsing="false" onAction="#goToCustomerDetails" text="Customers" />
-            <Button fx:id="btn_jobRoles" disable="true" mnemonicParsing="false" text="Job Roles" />
-            <Button fx:id="btn_jobTypes" mnemonicParsing="false" onAction="#goToJobTypeDetails" text="Job Types" />
+            <Button fx:id="btn_employees" mnemonicParsing="false" onAction="#goToEmployeeDetails" text="Employees">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="btn_contracts" mnemonicParsing="false" onAction="#goToContractDetails" prefHeight="25.0" text="Contracts">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="btn_customers" mnemonicParsing="false" onAction="#goToCustomerDetails" text="Customers">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="btn_jobRoles" disable="true" mnemonicParsing="false" text="Job Roles">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="btn_jobTypes" mnemonicParsing="false" onAction="#goToJobTypeDetails" text="Job Types">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
          </children>
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </HBox>
+      <VBox layoutX="598.0" layoutY="92.0" prefHeight="308.0" prefWidth="290.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
+               <children>
+                  <Label text="Name" />
+                  <TextField prefHeight="25.0" prefWidth="214.0" promptText="Name" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
+               <children>
+                  <Label text="Date of Birth" />
+                  <DatePicker promptText="Date of Birth" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
+               <children>
+                  <Label text="Contact Number" />
+                  <TextField prefHeight="25.0" prefWidth="155.0" promptText="Contact Number" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <Button fx:id="btn_logout" layoutX="828.0" layoutY="26.0" mnemonicParsing="false" text="Logout">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </Button>
+      <Label layoutX="706.0" layoutY="29.0" text="Welcome, Admin">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
