--- a/src/main/resources/IIT/PP2/CW2/FXML/ContractDetails.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/ContractDetails.fxml
@@ -78,7 +78,7 @@
             </HBox>
          </children>
       </VBox>
-      <Button fx:id="btn_logout" layoutX="824.0" layoutY="34.0" mnemonicParsing="false" text="Logout">
+      <Button fx:id="btn_logout" layoutX="824.0" layoutY="34.0" mnemonicParsing="false" onAction="#goToWelcomeScreen" text="Logout">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
