--- a/src/main/resources/IIT/PP2/CW2/FXML/EmployeeDetails.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/EmployeeDetails.fxml
@@ -56,7 +56,7 @@
             <Insets />
          </opaqueInsets>
       </HBox>
-      <Button fx:id="btn_logout" layoutX="825.0" layoutY="25.0" mnemonicParsing="false" text="Logout">
+      <Button fx:id="btn_logout" layoutX="825.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToWelcomeScreen" text="Logout">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
