--- a/src/main/resources/IIT/PP2/CW2/FXML/JobRoleDetails.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/JobRoleDetails.fxml
@@ -75,7 +75,7 @@
             </HBox>
          </children>
       </VBox>
-      <Button fx:id="btn_logout" layoutX="828.0" layoutY="26.0" mnemonicParsing="false" text="Logout">
+      <Button fx:id="btn_logout" layoutX="828.0" layoutY="26.0" mnemonicParsing="false" onAction="#goToWelcomeScreen" text="Logout">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
