--- a/src/main/resources/IIT/PP2/CW2/FXML/ContractDetails.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/ContractDetails.fxml
@@ -76,6 +76,25 @@
                   <DatePicker />
                </children>
             </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="290.0" spacing="10.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#saveContractDetails" text="Insert">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#updateContractDetails" text="Update">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#deleteContractDetails" text="Delete">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <Button fx:id="btn_logout" layoutX="824.0" layoutY="34.0" mnemonicParsing="false" onAction="#goToWelcomeScreen" text="Logout">
@@ -86,6 +105,11 @@
       <Label layoutX="697.0" layoutY="37.0" text="Welcome, Admin">
          <font>
             <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="lbl_status" layoutX="21.0" layoutY="373.0" prefHeight="20.0" prefWidth="531.0" textFill="RED">
+         <font>
+            <Font name="System Italic" size="12.0" />
          </font>
       </Label>
    </children>
