--- a/src/main/resources/IIT/PP2/CW2/FXML/JobRoleDetails.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/JobRoleDetails.fxml
@@ -73,6 +73,25 @@
                   <TextField prefHeight="25.0" prefWidth="155.0" promptText="Contact Number" />
                </children>
             </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="290.0" spacing="10.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#saveJobRoleDetails" text="Insert">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#updateJobRoleDetails" text="Update">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#deleteJobRoleDetails" text="Delete">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <Button fx:id="btn_logout" layoutX="828.0" layoutY="26.0" mnemonicParsing="false" onAction="#goToWelcomeScreen" text="Logout">
@@ -83,6 +102,11 @@
       <Label layoutX="706.0" layoutY="29.0" text="Welcome, Admin">
          <font>
             <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="lbl_status" layoutX="33.0" layoutY="362.0" prefHeight="20.0" prefWidth="531.0" textFill="RED">
+         <font>
+            <Font name="System Italic" size="12.0" />
          </font>
       </Label>
    </children>
