--- a/src/main/resources/IIT/PP2/CW2/FXML/JobTypeDetails.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/JobTypeDetails.fxml
@@ -72,6 +72,25 @@
                   <TextField prefHeight="25.0" prefWidth="155.0" promptText="Contact Number" />
                </children>
             </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="290.0" spacing="10.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#saveJobTypeDetails" text="Insert">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#updateJobTypeDetails" text="Update">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#deleteJobTypeDetails" text="Delete">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <Button fx:id="btn_logout" layoutX="834.0" layoutY="24.0" mnemonicParsing="false" onAction="#goToWelcomeScreen" text="Logout">
@@ -82,6 +101,11 @@
       <Label layoutX="712.0" layoutY="27.0" text="Welcome, Admin">
          <font>
             <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="lbl_status" layoutX="34.0" layoutY="373.0" prefHeight="20.0" prefWidth="531.0" textFill="RED">
+         <font>
+            <Font name="System Italic" size="12.0" />
          </font>
       </Label>
    </children>
