--- a/src/main/resources/IIT/PP2/CW2/FXML/ContractDetails.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/ContractDetails.fxml
@@ -23,10 +23,11 @@
       <TableView layoutX="17.0" layoutY="100.0" prefHeight="200.0" prefWidth="566.0">
         <columns>
           <TableColumn prefWidth="40.0" text="ID" />
-          <TableColumn prefWidth="150.0" text="Name" />
-            <TableColumn prefWidth="205.0" text="Description" />
-            <TableColumn prefWidth="96.0" text="Creation Date" />
-            <TableColumn prefWidth="75.0" text="Job Type" />
+          <TableColumn prefWidth="98.0" text="Name" />
+            <TableColumn prefWidth="149.0" text="Description" />
+            <TableColumn prefWidth="94.66665649414062" text="Creation Date" />
+            <TableColumn prefWidth="89.33334350585938" text="Job Type" />
+            <TableColumn prefWidth="94.0" text="Project Leader" />
         </columns>
       </TableView>
       <HBox alignment="CENTER" layoutX="45.0" layoutY="24.0" prefHeight="45.0" prefWidth="531.0" spacing="20.0">
