--- a/src/main/resources/IIT/PP2/CW2/FXML/WelcomeScreenUI.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/WelcomeScreenUI.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IIT.PP2.CW2.Controller.WelcomeController">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IIT.PP2.CW2.Controller.WelcomeScreenController">
    <children>
       <Label layoutX="144.0" layoutY="157.0" text="Username" />
       <Label layoutX="144.0" layoutY="199.0" text="Password" />
