--- a/src/main/resources/IIT/PP2/CW2/FXML/ContractDetailsUI.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/ContractDetailsUI.fxml
@@ -62,24 +62,35 @@
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
                <children>
                   <Label text="Name" />
-                  <TextField prefHeight="25.0" prefWidth="214.0" promptText="Name" />
+                  <TextField fx:id="txt_name" prefHeight="25.0" prefWidth="214.0" promptText="Name" />
                </children>
             </HBox>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
                <children>
                   <Label text="Description" />
-                  <TextArea prefHeight="40.0" prefWidth="184.0" promptText="Description" />
+                  <TextArea fx:id="txt_description" prefHeight="40.0" prefWidth="184.0" promptText="Description" />
                </children>
             </HBox>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
                <children>
                   <Label text="Creation Date" />
-                  <DatePicker />
+                  <DatePicker fx:id="txt_creationDate" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
+               <children>
+                  <Label text="Job Type" />
+                  <TextField fx:id="txt_jobType" prefHeight="25.0" prefWidth="201.0" promptText="Job Type" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="290.0" spacing="10.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#saveContractDetails" text="Insert">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#viewContractDetails" text="View">
                      <font>
                         <Font name="System Italic" size="12.0" />
                      </font>
