--- a/src/main/resources/IIT/PP2/CW2/FXML/WelcomeScreenUI.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/WelcomeScreenUI.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -12,7 +13,7 @@
       <Label layoutX="144.0" layoutY="157.0" text="Username" />
       <Label layoutX="144.0" layoutY="199.0" text="Password" />
       <TextField layoutX="208.0" layoutY="153.0" promptText="Username" />
-      <TextField layoutX="208.0" layoutY="195.0" promptText="Password" />
+      <PasswordField layoutX="208.0" layoutY="195.0" promptText="Password" />
       <Label layoutX="216.0" layoutY="70.0" text="WELCOME" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="14.0" />
