--- a/src/main/resources/IIT/PP2/CW2/FXML/EmployeeDetailsUI.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/EmployeeDetailsUI.fxml
@@ -23,10 +23,10 @@
         <columns>
             <TableColumn fx:id="tableCell_employeeDefaultId" prefWidth="40.0" text="Default ID" visible="false" />
             <TableColumn fx:id="tableCell_employeeId" prefWidth="40.0" text="ID" />
-          <TableColumn fx:id="tableCell_employeeName" prefWidth="180.0" text="Name" />
-          <TableColumn fx:id="tableCell_employeeDateOfBirth" prefWidth="89.0" text="Date of Birth" />
-            <TableColumn fx:id="tableCell_employeeContactNumber" prefWidth="76.0" text="Contact No." />
-            <TableColumn fx:id="tableCell_employeeJobRole" prefWidth="75.0" text="Job Role" />
+          <TableColumn fx:id="tableCell_employeeName" prefWidth="125.33332824707031" text="Name" />
+          <TableColumn fx:id="tableCell_employeeDateOfBirth" prefWidth="84.0" text="Date of Birth" />
+            <TableColumn fx:id="tableCell_employeeContactNumber" prefWidth="90.66665649414062" text="Contact No." />
+            <TableColumn fx:id="tableCell_employeeJobRole" prefWidth="120.33334350585938" text="Job Role" />
             <TableColumn fx:id="tableCell_employeeSalary" prefWidth="75.0" text="Salary" />
         </columns>
       </TableView>
